--- a/arch/arm/boot/dts/qcom/sdm660_f7a.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660_f7a.dtsi
@@ -35,7 +35,7 @@
 
 	chosen {
 		stdout-path = "serial0";
-		bootargs = "quiet noirqdebug norandmaps rcupdate.rcu_expedited=1";
+		bootargs = "quiet noirqdebug norandmaps rcupdate.rcu_expedited=1 cgroup.memory=nokmem,nosocket";
 	};
 
 	psci {
